[package]
name = "my-http-server-controllers"
version = "0.4.2-rc01"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []

[dependencies]
my-http-server = { branch = "main", git = "https://github.com/MyJetTools/my-http-server.git" }
tokio = { version = "*", features = ["full"] }
async-trait = "*"
hyper = { version = "*", features = ["full"] }
rust-extensions = { tag = "0.1.2", git = "https://github.com/MyJetTools/rust-extensions.git" }
serde = { version = "*", features = ["derive"] }
