[package]
name = "my-http-server-controllers"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []

[dependencies]
my-http-server = { tag = "0.6.1", git = "https://github.com/MyJetTools/my-http-server.git" }
tokio = { version = "*", features = ["full"] }
async-trait = "*"
hyper = { version = "0.14.27", features = ["full"] }
rust-extensions = { tag = "0.1.3", git = "https://github.com/MyJetTools/rust-extensions.git" }
serde = { version = "*", features = ["derive"] }
